--- a/.env.test
+++ b/.env.test
@@ -1,4 +1,4 @@
 APP_ENV=test
-APP_SECRET=9c35ffaedd22596f8373a060b872c731
+APP_SECRET=<paste_your_app_secret_here>
 
 DATABASE_URL="mysql://symfony:symfony@db:3306/symfony?serverVersion=8.0.40&charset=utf8mb4"
