--- a/composer.json
+++ b/composer.json
@@ -86,6 +86,7 @@
     },
     "require-dev": {
         "icanhazstring/composer-unused": "^0.8",
+        "phpunit/phpunit": "^10.5",
         "roave/security-advisories": "dev-latest",
         "squizlabs/php_codesniffer": "^3.10",
         "symfony/browser-kit": "6.4.*",
