--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -28,7 +28,7 @@ when@test:
     doctrine:
         dbal:
             # "TEST_TOKEN" is typically set by ParaTest
-            dbname_suffix: '_test'
+            # dbname_suffix: '_test'
 
 # Configuration for the production environment
 when@prod:
