--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -20,5 +20,6 @@ framework:
 when@test:
     framework:
         test: true
+        error_controller: null
         session:
             storage_factory_id: session.storage.factory.mock_file
