--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -8,6 +8,7 @@
 
     <php>
         <env name="APP_ENV" value="test"/>
+        <env name="APP_DEBUG" value="false"/>
         <ini name="display_errors" value="1" />
         <ini name="error_reporting" value="-1" />
         <server name="APP_ENV" value="test" force="true" />
@@ -15,6 +16,7 @@
         <server name="SYMFONY_PHPUNIT_REMOVE" value="" />
         <server name="SYMFONY_PHPUNIT_VERSION" value="9.6" />
         <env name="KERNEL_CLASS" value="App\Kernel" />
+        <server name="DATABASE_URL" value="mysql://symfony:symfony@db:3306/symfony_test?serverVersion=8.0.40"/>
     </php>
 
     <testsuites>
