--- a/composer.json
+++ b/composer.json
@@ -73,7 +73,12 @@
         "post-update-cmd": [
             "@auto-scripts"
         ],
-        "phpcs": "vendor/bin/phpcs --standard=PSR12 src"
+        "phpcs": "vendor/bin/phpcs --standard=PSR12 src",
+        "generate-keys": [
+            "if [ ! -f config/jwt/private.pem ]; then mkdir -p config/jwt; openssl genrsa -out config/jwt/private.pem 4096; fi",
+            "if [ ! -f config/jwt/public.pem ]; then openssl rsa -pubout -in config/jwt/private.pem -out config/jwt/public.pem; fi",
+            "php bin/console secret:generate"
+        ]
     },
     "conflict": {
         "symfony/symfony": "*"
