--- a/.env.test
+++ b/.env.test
@@ -1,4 +1,4 @@
 APP_ENV=test
-APP_SECRET=<paste_your_app_secret_here>
+APP_SECRET=<your_app_secret>
 
-DATABASE_URL="mysql://symfony:symfony@db:3306/symfony_test?serverVersion=8.0.40&charset=utf8mb4"
+DATABASE_URL="mysql://symfony:symfony@db:3306/symfony_test?serverVersion=8.0.40"
