--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -16,7 +16,7 @@
         <server name="SYMFONY_PHPUNIT_REMOVE" value="" />
         <server name="SYMFONY_PHPUNIT_VERSION" value="9.6" />
         <env name="KERNEL_CLASS" value="App\Kernel" />
-        <server name="DATABASE_URL" value="mysql://symfony:symfony@db:3306/symfony_test?serverVersion=8.0.40"/>
+        <env name="DATABASE_URL" value="mysql://symfony:symfony@test_db:3306/symfony_test?serverVersion=8.0.40"/>
     </php>
 
     <testsuites>
